metabase/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: metabase-public
  namespace: metabase
spec:
  replicas: 2
  selector:
    matchLabels:
      app: metabase-public
  template:
    metadata:
      labels:
        app: metabase-public
    spec:
      containers:
        - name: metabase-public
          image: metabase/metabase:v0.43.4
          ports:
            - containerPort: 3000
