metabase/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-metabase-public
  namespace: metabase
spec:
  type: ClusterIP
  ports:
  - name: http-web
    protocol: TCP
    port: 80
    targetPort: 3000
  selector:
    app: metabase-public
