metabase/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: metabase-route
  namespace: metabase
spec:
  parentRefs:
  - name: public-gateway
    namespace: production
  rules:
  - backendRefs:
    - name: svc-metabase-public
      port: 80
